# MultiGoogleCalCli

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/multicalcli/: __init__.py  accounts.py  api.py  auth.py  cli.py  config.py  display.py  models.py
tests/: test_config.py  test_models.py  test_parse_event_time.py
